# memorylane

./: .env.slack-approval-bot.example  .eslintrc.json  .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  electron-builder.yml  electron.vite.config.ts  install.sh  migration-plan.md  package-lock.json  package.json  project-plan.md  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.main.config.ts
.agents/skills/: release
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/plans/: screen-capture.md
.codex/environments/: environment.toml
.github/workflows/: release.yml
assets/: README.md  conferences_july_texas.csv
docs/: slack-semantic-layer.md
docs/architecture-refactor/: ARCHITECTURE_DIAGRAM.md
findings/: downsampling-benchmark.md  video-stitcher-encoder-benchmark.md
native/windows/app-watcher/: Cargo.toml  README.md
native/windows/app-watcher/src/: main.rs  output.rs
native/windows/screenshot-capturer/: Cargo.toml
native/windows/screenshot-capturer/src/: main.rs
plugins/memorylane/: .mcp.json  INSTALL.md
scripts/: build-rust.js  build-swift.sh  db-search.ts  db-stats.ts  detect-patterns.ts  enode.sh  install-local.sh  mcp-dev.ts  mcp-server.ts  slack-approval-bot.ts  slack-semantic-test.ts
src/: main.ts
src/main/: activity-cleanup.test.ts  activity-cleanup.ts  activity-extractor.test.ts  activity-extractor.ts  activity-producer.test.ts  activity-producer.ts  activity-semantic-service.integration.test.ts  activity-semantic-service.ollama.integration.test.ts  activity-semantic-service.test.ts  activity-types.ts  (+37 more)
(+198 files in other folders)
