[package]
name = "app-watcher-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
] }
