[package]
name = "screenshot-capturer-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
] }
